- Fixes bug where the avatar in the profile popout is misaligned #3 - Fixed Avatar size in profile popout. - Fixed selectors after late April/Early May discord update.

--- a/small-members-tab.theme.css
+++ b/small-members-tab.theme.css
@@ -36,8 +36,8 @@ div[class*="membersWrap-"] div[class*="members-"] div[class*="membersGroup-"] {
   flex-basis: auto;
   box-sizing: border-box;
   text-overflow: ellipsis;
-  white-space: clip;
-  overflow: visible;
+  white-space: nowrap;
+  overflow: hidden;
   word-wrap: normal;
   max-width: 90px;
   right: 45px;
@@ -53,14 +53,13 @@ div[class*="membersWrap-"] div[class*="members-"]:hover div[class*="membersGroup
   text-overflow: 'a';
 }
 
-/* Adjusting Collapsed Member List Width */
 div[class*="membersWrap-"] {
   min-width: 70px !important;
   width: 70px !important
 }
 
 /* Avatar icon resizing */
-.avatar-1BXaQj{
+.avatar-16XVId{
     transform:scale(1);
     width: 38px;
     height:38px;
@@ -69,6 +68,17 @@ div[class*="membersWrap-"] {
 /* Adjusting sizing between each member */
 .member-2FrNV0{
     height: 45px;
+}
+
+/* Fixes avatar resize from above, in member profile pop outs (When you click on a member in the member list) */
+.popout-2fzvxG{
+    height: 90px !important;
+    width: 90px !important;
+}
+
+/* Fixes the user profile popout avatar being misaligned */
+.maskProfile-1ObLFT{
+    -webkit-mask:none;
 }
 
 /* TOFIX */
